// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SVG output regression renders "arc" to valid SVG 1`] = `
"<svg viewBox="-0.2 -0.2 1.4 1.4" class="_myopic-1" xmlns="http://www.w3.org/2000/svg"><style>.pj-stroke-sunset-b1{stroke:#41476b}
[data-theme="light"] .pj-stroke-sunset-b1{stroke:#8b90b8}</style><g data-jp-id="SArc-1"><path stroke-width="0.04" x="0" y="0" d=" M 0 0 A 1 1 45 0 1 1 1 " fill="none" class="pj-stroke-sunset-b1"></path></g></svg>"
`;

exports[`SVG output regression renders "arrow both ends" to valid SVG 1`] = `
"<svg viewBox="0.01600000000000018 -0.2 2.9679999999999995 0.4" class="_myopic-1" xmlns="http://www.w3.org/2000/svg"><style>.pj-stroke-sunset-b1{stroke:#41476b}
.pj-fill-sunset-b1{fill:#41476b}
[data-theme="light"] .pj-stroke-sunset-b1{stroke:#8b90b8}
[data-theme="light"] .pj-fill-sunset-b1{fill:#8b90b8}</style><g data-jp-id="SLine-1"><path stroke-width="0.04" x="1.5" y="0" d="M 0.216 0 L 2.784 0" fill="none" class="pj-stroke-sunset-b1"></path><path d="M 0.216 0.06 L 0.06 0 L 0.216 -0.06 Z" stroke="none" class="pj-fill-sunset-b1"></path><path d="M 2.784 -0.06 L 2.94 0 L 2.784 0.06 Z" stroke="none" class="pj-fill-sunset-b1"></path></g></svg>"
`;

exports[`SVG output regression renders "box to box with arrow" to valid SVG 1`] = `
"<svg viewBox="-0.7 -0.575 3.4 1.15" class="_myopic-1" xmlns="http://www.w3.org/2000/svg"><style>.pj-fill-sunset-b1{fill:#41476b}
.pj-stroke-sunset-b1{stroke:#41476b}
[data-theme="light"] .pj-fill-sunset-b1{fill:#8b90b8}
[data-theme="light"] .pj-stroke-sunset-b1{stroke:#8b90b8}</style><rect width="1" height="0.75" stroke="none" stroke-width="0.015" rx="0.06" ry="0.06" x="-0.5" y="-0.375" class="pj-fill-sunset-b1" data-jp-id="SBox-1"></rect><g data-jp-id="SLine-2"><path stroke-width="0.04" x="1" y="0" d="M 0.5 0 L 1.284 0" fill="none" class="pj-stroke-sunset-b1"></path><path d="M 1.284 -0.06 L 1.44 0 L 1.284 0.06 Z" stroke="none" class="pj-fill-sunset-b1"></path></g><rect width="1" height="0.75" stroke="none" stroke-width="0.015" rx="0.06" ry="0.06" x="1.5" y="-0.375" class="pj-fill-sunset-b1" data-jp-id="SBox-3"></rect></svg>"
`;

exports[`SVG output regression renders "circle with label" to valid SVG 1`] = `
"<svg viewBox="-0.7 -0.7 1.4 1.4" class="_myopic-1" xmlns="http://www.w3.org/2000/svg"><style>.pj-fill-sunset-b1{fill:#41476b}
.pj-fill-sunset-f1{fill:#fbdfa2}
[data-theme="light"] .pj-fill-sunset-b1{fill:#8b90b8}
[data-theme="light"] .pj-fill-sunset-f1{fill:#1a1a2e}</style><g data-jp-id="SCircle-1"><circle r="0.5" stroke="none" stroke-width="0.015" cx="0" cy="0" class="pj-fill-sunset-b1" data-jp-id="SCircle-1"></circle><text font-family="Roboto, sans-serif" font-size="0.14" font-style="normal" font-variant="normal" font-weight="normal" font-stretch="normal" x="-0.16100000000000003" y="-0.084" class="pj-fill-sunset-f1" dominant-baseline="text-before-edge" data-jp-id="SLabel-2">Hello</text></g></svg>"
`;

exports[`SVG output regression renders "dashed line" to valid SVG 1`] = `
"<svg viewBox="-0.2 -0.2 3.4 0.4" class="_myopic-1" xmlns="http://www.w3.org/2000/svg"><style>.pj-stroke-sunset-b1{stroke:#41476b}
[data-theme="light"] .pj-stroke-sunset-b1{stroke:#8b90b8}</style><g data-jp-id="SLine-1"><path stroke-width="0.04" x="1.5" y="0" stroke-dasharray="0.08,0.04" d="M 0 0 L 3 0" fill="none" class="pj-stroke-sunset-b1"></path></g></svg>"
`;

exports[`SVG output regression renders "ellipse" to valid SVG 1`] = `
"<svg viewBox="-0.7 -0.575 1.4 1.15" class="_myopic-1" xmlns="http://www.w3.org/2000/svg"><style>.pj-fill-sunset-b1{fill:#41476b}
[data-theme="light"] .pj-fill-sunset-b1{fill:#8b90b8}</style><ellipse rx="0.5" ry="0.375" stroke="none" stroke-width="0.015" cx="0" cy="0" class="pj-fill-sunset-b1" data-jp-id="SEllipse-1"></ellipse></svg>"
`;

exports[`SVG output regression renders "group" to valid SVG 1`] = `
"<svg viewBox="-1.126776695296637 -0.7 2.4 1.4" class="_myopic-1" xmlns="http://www.w3.org/2000/svg"><style>.pj-fill-sunset-b1{fill:#41476b}
[data-theme="light"] .pj-fill-sunset-b1{fill:#8b90b8}</style><g transform="translate(0, 0)" data-jp-id="SGroup-3"><rect width="1" height="0.75" stroke="none" stroke-width="0.015" rx="0.06" ry="0.06" x="-0.9267766952966369" y="-0.375" class="pj-fill-sunset-b1" data-jp-id="SBox-1"></rect><circle r="0.5" stroke="none" stroke-width="0.015" cx="0.5732233047033631" cy="6.123233995736766e-17" class="pj-fill-sunset-b1" data-jp-id="SCircle-2"></circle></g></svg>"
`;

exports[`SVG output regression renders "line with label" to valid SVG 1`] = `
"<svg viewBox="-0.7 -0.575 3.4 1.15" class="_myopic-1" xmlns="http://www.w3.org/2000/svg"><style>.pj-fill-sunset-b1{fill:#41476b}
.pj-stroke-sunset-b1{stroke:#41476b}
.pj-fill-native-fg{fill:currentColor}
[data-theme="light"] .pj-fill-sunset-b1{fill:#8b90b8}
[data-theme="light"] .pj-stroke-sunset-b1{stroke:#8b90b8}
[data-theme="light"] .pj-fill-native-fg{fill:#1a1a2e}</style><rect width="1" height="0.75" stroke="none" stroke-width="0.015" rx="0.06" ry="0.06" x="-0.5" y="-0.375" class="pj-fill-sunset-b1" data-jp-id="SBox-1"></rect><g data-jp-id="SLine-2"><g data-jp-id="SLine-2"><path stroke-width="0.04" x="1" y="0" d="M 0.5 0 L 1.284 0" fill="none" class="pj-stroke-sunset-b1"></path><path d="M 1.284 -0.06 L 1.44 0 L 1.284 0.06 Z" stroke="none" class="pj-fill-sunset-b1"></path></g><text font-family="Roboto, sans-serif" font-size="0.14" font-style="normal" font-variant="normal" font-weight="normal" font-stretch="normal" x="0.9034" y="-0.23700000000000004" class="pj-fill-native-fg" dominant-baseline="text-before-edge" data-jp-id="SLabel-3">yes</text></g><rect width="1" height="0.75" stroke="none" stroke-width="0.015" rx="0.06" ry="0.06" x="1.5" y="-0.375" class="pj-fill-sunset-b1" data-jp-id="SBox-4"></rect></svg>"
`;

exports[`SVG output regression renders "line" to valid SVG 1`] = `
"<svg viewBox="-0.2 -0.2 1.4 1.4" class="_myopic-1" xmlns="http://www.w3.org/2000/svg"><style>.pj-stroke-sunset-b1{stroke:#41476b}
[data-theme="light"] .pj-stroke-sunset-b1{stroke:#8b90b8}</style><g data-jp-id="SPolyline-1"><path stroke-width="0.04" fill="none" x="0.5" y="0.5" d="M 0 0 L 1 0 L 1 1" class="pj-stroke-sunset-b1"></path></g></svg>"
`;

exports[`SVG output regression renders "nested group" to valid SVG 1`] = `
"<svg viewBox="-1.126776695296637 -0.7 2.4 1.4" class="_myopic-1" xmlns="http://www.w3.org/2000/svg"><style>.pj-fill-sunset-b1{fill:#41476b}
[data-theme="light"] .pj-fill-sunset-b1{fill:#8b90b8}</style><g transform="translate(0, 0)" data-jp-id="SGroup-4"><g transform="translate(-0.42677669529663687, 0)" data-jp-id="SGroup-2"><rect width="1" height="0.75" stroke="none" stroke-width="0.015" rx="0.06" ry="0.06" x="-0.5" y="-0.375" class="pj-fill-sunset-b1" data-jp-id="SBox-1"></rect></g><circle r="0.5" stroke="none" stroke-width="0.015" cx="0.5732233047033631" cy="6.123233995736766e-17" class="pj-fill-sunset-b1" data-jp-id="SCircle-3"></circle></g></svg>"
`;

exports[`SVG output regression renders "rotated box" to valid SVG 1`] = `
"<svg viewBox="-0.8187184335382292 -0.8187184335382292 1.6374368670764583 1.6374368670764583" class="_myopic-1" xmlns="http://www.w3.org/2000/svg"><style>.pj-fill-sunset-b1{fill:#41476b}
[data-theme="light"] .pj-fill-sunset-b1{fill:#8b90b8}</style><rect width="1" height="0.75" stroke="none" stroke-width="0.015" rx="0.06" ry="0.06" transform="rotate(45, 0, 0)" x="-0.5" y="-0.375" class="pj-fill-sunset-b1" data-jp-id="SBox-1"></rect></svg>"
`;

exports[`SVG output regression renders "single box" to valid SVG 1`] = `
"<svg viewBox="-0.7 -0.575 1.4 1.15" class="_myopic-1" xmlns="http://www.w3.org/2000/svg"><style>.pj-fill-sunset-b1{fill:#41476b}
[data-theme="light"] .pj-fill-sunset-b1{fill:#8b90b8}</style><rect width="1" height="0.75" stroke="none" stroke-width="0.015" rx="0.06" ry="0.06" x="-0.5" y="-0.375" class="pj-fill-sunset-b1" data-jp-id="SBox-1"></rect></svg>"
`;

exports[`SVG output regression renders "sized box" to valid SVG 1`] = `
"<svg viewBox="-1.2 -0.7 2.4 1.4" class="_myopic-1" xmlns="http://www.w3.org/2000/svg"><style>.pj-fill-sunset-b1{fill:#41476b}
[data-theme="light"] .pj-fill-sunset-b1{fill:#8b90b8}</style><rect width="2" height="1" stroke="none" stroke-width="0.015" rx="0.06" ry="0.06" x="-1" y="-0.5" class="pj-fill-sunset-b1" data-jp-id="SBox-1"></rect></svg>"
`;

exports[`SVG output regression renders "styled" to valid SVG 1`] = `"<svg viewBox="-0.7 -0.575 1.4 1.15" class="_myopic-1" xmlns="http://www.w3.org/2000/svg"><rect width="1" height="0.75" fill="#ff0000" stroke="#0000ff" stroke-width="0.05" rx="0.06" ry="0.06" x="-0.5" y="-0.375" data-jp-id="SBox-1"></rect></svg>"`;

exports[`SVG output regression renders "with constraint" to valid SVG 1`] = `
"<svg viewBox="-0.7 -0.7 2.9 1.4" class="_myopic-1" xmlns="http://www.w3.org/2000/svg"><style>.pj-fill-sunset-b1{fill:#41476b}
[data-theme="light"] .pj-fill-sunset-b1{fill:#8b90b8}</style><rect width="1" height="0.75" stroke="none" stroke-width="0.015" rx="0.06" ry="0.06" x="-0.5" y="-0.375" class="pj-fill-sunset-b1" data-jp-id="SBox-1"></rect><circle r="0.5" stroke="none" stroke-width="0.015" x="1.5" y="0" cx="1.5" cy="0" class="pj-fill-sunset-b1" data-jp-id="SCircle-2"></circle></svg>"
`;
